# cochange-tool

./: .gitmodules  .rustfmt.toml  Cargo.toml  NOTES  build.rs  ctags_kinds.txt  misc.sql
queries/java/: tags.scm
sql/: init_changes.sql  init_commits.sql  init_entities.sql  initialize.sql
src/: db.rs  deps.rs  extraction.rs  gtl.rs  ir.rs  main.rs  main_old.rs  parsing.rs  persist.rs  persistence.rs  tagging.rs  time.rs  walking.rs
