[package]
name = "git-tag-dump"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
clap = { version = "3.2.23", features = ["derive", "cargo"] }
clap-verbosity-flag = "1.0.1"
anyhow = "1.0.68"
tree-sitter = "0.20.9"
derive_builder = "0.12.0"

[build-dependencies]
cc = "1.0.78"