[package]
name = "cochange-tool"
version = "0.1.0"
authors = ["Jason Lefever <jasontituslefever@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
clap = { version = "3.2.23", features = ["derive", "cargo"] }
clap-verbosity-flag = "1.0.1"
anyhow = "1.0.68"
tree-sitter = "0.20.9"
derive_builder = "0.12.0"
git2 = "0.15.0"
# rusqlite = "0.28.0"
# whoami = "1.3.0"
humantime = "2.1.0"
time = { version = "0.3.17", features = ["parsing", "macros"] }
bitflags = "1.3.2"
# derive-new = "0.5.9"
rayon = "1.6.1"

[build-dependencies]
cc = "1.0.78"